<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.theBOC.bocbible.Versions" >
    <RadioGroup 
	    android:layout_width="match_parent"
	    android:layout_marginTop="@dimen/activity_vertical_margin"
	    android:layout_marginLeft="@dimen/activity_horizontal_margin"
	    android:layout_height="@dimen/boc_default_listItem_height"
	    android:orientation="horizontal">
	    <RadioButton android:id="@+id/radio_single_version"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/single_version"/>
	    <RadioButton android:id="@+id/radio_parallel_versions"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="@dimen/activity_horizontal_margin"
	        android:text="@string/parallel_version"/>
	</RadioGroup>
	<LinearLayout android:id="@+id/parallel_versions_controls"
	    android:layout_marginRight="@dimen/activity_horizontal_margin"
	    android:layout_marginBottom="@dimen/activity_vertical_margin"
	    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    	android:layout_height="50dp"
    	android:layout_width="match_parent"
    	android:padding="12dp"
    	android:visibility="gone"
    	android:background="@drawable/verse_grid_bg">
    
    	<TextView android:id="@+id/txt_version_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@drawable/counter_bg"
		android:layout_gravity="right|center_vertical"
        android:textColor="@color/counter_text_color"/>
    	<TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/pipe" />
    	<TextView android:id="@+id/txt_version_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/counter_bg"
		android:layout_gravity="right|center_vertical"
        android:textColor="@color/counter_text_color" />
    	<View 
    	    android:layout_width="0dp"
    	    android:layout_height="0dp"
    	    android:layout_weight="1"/>
    	<Button android:id="@+id/btnSwitchVersion"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="@dimen/activity_horizontal_margin"
			android:gravity="center_vertical|center_horizontal"
			android:layout_gravity="right"
			android:contentDescription="@null"
			android:background="@drawable/light_btn_bg"
			android:textSize="12sp"
			android:text="@string/switc"
			android:textColor="@color/btn_light_text_color" />
    	<Button android:id="@+id/btnDone"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:layout_gravity="right"
            android:contentDescription="@null"
            android:background="@drawable/btn_brown_bg"
            android:textSize="12sp"
            android:text="@string/done"
            android:textColor="@color/btn_brown_text_color" />
	</LinearLayout>
     <ListView android:id="@+id/lst_bible_versions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice" />
</LinearLayout>
