<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.theBOC.bocbible.SearchFragment" >
	<LinearLayout android:id="@+id/spin_versions"
	    android:layout_width="match_parent"
	    android:layout_height="40dp"
	    android:layout_marginTop="@dimen/activity_vertical_margin"
	    android:layout_marginLeft="@dimen/activity_horizontal_margin"
	    android:layout_marginRight="@dimen/activity_horizontal_margin">
	    <Button android:id="@+id/btnSearchingVersion"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@drawable/counter_bg"
	        android:layout_marginRight="2dp"/>
	    <EditText android:id="@+id/edit_search"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="match_parent"
	        android:background="@drawable/counter_bg"
	        android:layout_marginRight="2dp"
	        android:hint="@string/tap_to_search"
	        android:inputType="text" />
	    <Button android:id="@+id/btn_search"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@drawable/btn_brown_bg"
	        android:textColor="@color/btn_brown_text_color"
	        android:text="@string/search"/>
	</LinearLayout>
	<TextView android:id="@+id/txtResultForText"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="70dp" 
	    android:layout_marginLeft="@dimen/activity_horizontal_margin"
	    android:layout_marginRight="@dimen/activity_horizontal_margin"
	    android:visibility="gone" />
    <ListView android:id="@+id/lst_bible_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"  
        android:choiceMode="singleChoice"
        android:layout_marginTop="100dp"
        android:divider="@null"/>
     <TextView
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/no_result" 
        android:minHeight="?android:attr/listPreferredItemHeightSmall"
        android:textAppearance="?android:attr/textAppearanceListItemSmall"
        android:visibility="gone"
        android:text="@string/no_result_found"/>

</RelativeLayout>
